-- SPDX-FileCopyrightText: 2022 Frank Doepper
--
-- SPDX-License-Identifier: GPL-3.0-only

name:                amqp-utils

version:             0.6.7.3

synopsis:            AMQP toolset for the command line

description:         AMQP tools consisting of:
  AMQP consumer which can
  create a temporary queue and attach it to an exchange, or
  attach to an existing queue;
  display header and body info;
  save message bodies to files;
  call a callback script.
  AMQP publisher with file, line-by-line and
  hotfolder capabilities.
  AMQP rpc client and server.

license:             GPL-3

license-file:        LICENSES/GPL-3.0-only.txt

author:              Frank Doepper

maintainer:          fd@taz.de

category:            Network

build-type:          Simple

extra-source-files:  ChangeLog.md, README.md

cabal-version:       >=1.10

executable konsum
  main-is:             konsum.hs
  build-depends:       base >= 4.6 && < 5,
                       containers >= 0.6 && < 0.8,
                       text >= 2.0 && < 2.2,
                       crypton-connection >= 0.3 && < 0.5,
                       data-default-class >= 0.1 && < 0.3,
                       time >= 1.12 && < 1.15,
                       process >= 1.6 && < 1.7,
                       directory >= 1.3 && < 1.4,
                       bytestring >= 0.11 && < 0.13,
                       utf8-string >= 1.0 && < 1.1,
                       filepath-bytestring >= 1.4 && < 1.6,
                       crypton-x509-system >= 1.6 && < 1.7,
                       network > 2.6 && < 3.3,
                       tls >= 1.7.0 && < 2.2,
                       amqp >= 0.22.2 && < 0.25,
                       unix >= 2.8 && < 2.9

  ghc-options:         -threaded -Wall

  default-language:    Haskell2010

  other-modules:       Network.AMQP.Utils.Options,
                       Network.AMQP.Utils.Helpers,
                       Network.AMQP.Utils.Connection,
                       Paths_amqp_utils

executable agitprop
  main-is:             agitprop.hs
  build-depends:       base >= 4.6 && <5,
                       containers >= 0.6 && < 0.8,
                       text >= 2.0 && < 2.2,
                       crypton-connection >= 0.3 && < 0.5,
                       data-default-class >= 0.1 && < 0.3,
                       time >= 1.12 && < 1.15,
                       process >= 1.6 && < 1.7,
                       directory >= 1.3 && < 1.4,
                       bytestring >= 0.11 && < 0.13,
                       utf8-string >= 1.0 && < 1.1,
                       filepath-bytestring >= 1.4 && < 1.6,
                       crypton-x509-system >= 1.6 && < 1.7,
                       network > 2.6 && < 3.3,
                       tls >= 1.7.0 && < 2.2,
                       amqp >= 0.22.2 && < 0.25,
                       unix >= 2.8 && < 2.9,
                       filepath >= 1.4 && < 1.6,
                       rawfilepath >= 1.1.1 && < 1.2,
                       magic >= 1.1 && < 1.2
  if os(linux)
    build-depends:     hinotify >= 0.3.10 && < 0.5

  ghc-options:         -threaded -Wall

  default-language:    Haskell2010

  other-modules:       Network.AMQP.Utils.Options,
                       Network.AMQP.Utils.Helpers,
                       Network.AMQP.Utils.Connection,
                       Paths_amqp_utils

executable plane
  main-is:             plane.hs
  build-depends:       base >=4.6 && <5,
                       containers >= 0.6 && < 0.8,
                       text >= 2.0 && < 2.2,
                       crypton-connection >= 0.3 && < 0.5,
                       data-default-class >= 0.1 && < 0.3,
                       time >= 1.12 && < 1.15,
                       process >= 1.6 && < 1.7,
                       directory >= 1.3 && < 1.4,
                       bytestring >= 0.11 && < 0.13,
                       utf8-string >= 1.0 && < 1.1,
                       filepath-bytestring >= 1.4 && < 1.6,
                       crypton-x509-system >= 1.6 && < 1.7,
                       network > 2.6 && < 3.3,
                       tls >= 1.7.0 && < 2.2,
                       amqp >= 0.22.2 && < 0.25,
                       unix >= 2.8 && < 2.9

  ghc-options:         -threaded -Wall

  default-language:    Haskell2010

  other-modules:       Network.AMQP.Utils.Options,
                       Network.AMQP.Utils.Helpers,
                       Network.AMQP.Utils.Connection,
                       Paths_amqp_utils

executable arbeite
  main-is:             arbeite.hs
  build-depends:       base >= 4.6 && <5,
                       containers >= 0.6 && < 0.8,
                       text >= 2.0 && < 2.2,
                       crypton-connection >= 0.3 && < 0.5,
                       data-default-class >= 0.1 && < 0.3,
                       time >= 1.12 && < 1.15,
                       process >= 1.6 && < 1.7,
                       directory >= 1.3 && < 1.4,
                       bytestring >= 0.11 && < 0.13,
                       utf8-string >= 1.0 && < 1.1,
                       filepath-bytestring >= 1.4 && < 1.6,
                       crypton-x509-system >= 1.6 && < 1.7,
                       network > 2.6 && < 3.3,
                       tls >= 1.7.0 && < 2.2,
                       amqp >= 0.22.2 && < 0.25,
                       unix >= 2.8 && < 2.9

  ghc-options:         -threaded -Wall

  default-language:    Haskell2010

  other-modules:       Network.AMQP.Utils.Options,
                       Network.AMQP.Utils.Helpers,
                       Network.AMQP.Utils.Connection,
                       Paths_amqp_utils

source-repository head
  type:                git
  location:            git://woffs.de/git/fd/haskell-amqp-utils.git
