cabal-version:      1.12
name:               bcp47-orphans
version:            0.1.3.0
license:            MIT
license-file:       LICENSE
copyright:          2019 Freckle Education
maintainer:         engineering@freckle.com
author:             Evan Rutledge Borden
homepage:           https://github.com/freckle/bcp47#readme
bug-reports:        https://github.com/freckle/bcp47/issues
synopsis:           BCP47 orphan instances
description:        Orphan instances for the BCP47 type
category:           Orphan Instances
build-type:         Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
    type:     git
    location: https://github.com/freckle/bcp47

library
    exposed-modules:
        Data.BCP47.Aeson
        Data.BCP47.Autodocodec
        Data.BCP47.Csv
        Data.BCP47.Esqueleto
        Data.BCP47.Hashable
        Data.BCP47.HttpApiData
        Data.BCP47.OpenApi
        Data.BCP47.PathPieces
        Data.BCP47.Persist
        Data.BCP47.Serialise

    hs-source-dirs:   library
    other-modules:    Paths_bcp47_orphans
    default-language: Haskell2010
    build-depends:
        aeson >=1.4.7.1,
        autodocodec >=0.4.1.0,
        base >=4.7 && <5,
        bcp47 >=0.3.0.0,
        cassava >=0.5.2.0,
        errors >=2.3.0,
        esqueleto >=3.3.4.1,
        hashable >=1.3.0.0,
        http-api-data >=0.4.1.1,
        lens >=4.18.1,
        openapi3 >=3.2.4,
        path-pieces >=0.2.1,
        persistent >=2.10.5.3,
        serialise >=0.2.3.0,
        text >=1.2.4.0

test-suite spec
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   tests
    other-modules:
        Data.BCP47.AesonSpec
        Data.BCP47.CsvSpec
        Data.BCP47.PathPiecesSpec
        Data.BCP47.PersistSpec
        Data.BCP47.Roundtrip
        Data.BCP47.SerialiseSpec
        Paths_bcp47_orphans

    default-language: Haskell2010
    build-depends:
        QuickCheck >=2.13.2,
        aeson >=1.4.7.1,
        base >=4.7 && <5,
        bcp47 >=0.3.0.0,
        bcp47-orphans,
        cassava >=0.5.2.0,
        hspec >=2.7.6,
        path-pieces >=0.2.1,
        persistent >=2.10.5.3,
        serialise >=0.2.3.0
