cabal-version: 3.0
name: box-socket
version: 0.5.3.0
license: BSD-3-Clause
license-file: LICENSE
copyright: Tony Day (c) 2017
category: web
author: Tony Day
maintainer: tonyday567@gmail.com
homepage: https://github.com/tonyday567/box-socket#readme
bug-reports: https://github.com/tonyday567/box-socket/issues
synopsis: Box websockets
description: Websockets built with the box library.
build-type: Simple
tested-with:
  ghc ==9.10.2
  ghc ==9.12.2
  ghc ==9.14.1

extra-doc-files:
  ChangeLog.md
  readme.md

source-repository head
  type: git
  location: https://github.com/tonyday567/box-socket

common ghc-options-exe-stanza
  ghc-options:
    -fforce-recomp
    -funbox-strict-fields
    -rtsopts
    -threaded
    -with-rtsopts=-N

common ghc-options-stanza
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Wredundant-constraints

common ghc2024-additions
  default-extensions:
    DataKinds
    DerivingStrategies
    DisambiguateRecordFields
    ExplicitNamespaces
    GADTs
    LambdaCase
    MonoLocalBinds
    RoleAnnotations

common ghc2024-stanza
  if impl(ghc >=9.10)
    default-language:
      GHC2024
  else
    import: ghc2024-additions
    default-language:
      GHC2021

library
  import: ghc-options-stanza
  import: ghc2024-stanza
  hs-source-dirs: src
  build-depends:
    async >=2.2.3 && <2.3,
    base >=4.14 && <5,
    box >=0.9.3 && <0.10,
    bytestring >=0.11.3 && <0.13,
    network-simple >=0.4 && <0.5,
    profunctors >=5.6 && <5.7,
    text >=1.2 && <2.2,
    websockets >=0.12 && <0.14,

  exposed-modules:
    Box.Socket.Types
    Box.TCP
    Box.TCP.Example
    Box.Websocket
    Box.Websocket.Example

executable box-socket
  import: ghc-options-exe-stanza
  import: ghc-options-stanza
  import: ghc2024-stanza
  main-is: box-socket.hs
  hs-source-dirs: app
  build-depends:
    base >=4.14 && <5,
    box-socket,
    optparse-applicative >=0.17 && <0.20,
