name:                byteset
version:             0.1.1.2
category:            Data
synopsis:            Set of bytes.
description:         Data structure for sets of bytes, where bytes are @Word8@ values.
license:             BSD3
license-file:        LICENSE
maintainer:          Daniel Casanueva (coding `at` danielcasanueva.eu)
bug-reports:         https://codeberg.org/daniel-casanueva/byteset/issues
build-type:          Simple
cabal-version:       1.18
extra-doc-files:     changelog.md

library
  exposed-modules: Data.ByteSet
  build-depends: base == 4.*
               , binary
  default-language: Haskell2010
  ghc-options: -Wall
