name:          contravariant
category:      Control, Data
version:       1.5.6
license:       BSD3
cabal-version: >= 1.10
license-file:  LICENSE
author:        Edward A. Kmett
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     provisional
homepage:      http://github.com/ekmett/contravariant/
bug-reports:   http://github.com/ekmett/contravariant/issues
copyright:     Copyright (C) 2007-2015 Edward A. Kmett
synopsis:      Contravariant functors
description:   Contravariant functors.
build-type:    Simple
tested-with:   GHC == 8.0.2
             , GHC == 8.2.2
             , GHC == 8.4.4
             , GHC == 8.6.5
             , GHC == 8.8.4
             , GHC == 8.10.7
             , GHC == 9.0.2
             , GHC == 9.2.8
             , GHC == 9.4.8
             , GHC == 9.6.7
             , GHC == 9.8.4
             , GHC == 9.10.3
             , GHC == 9.12.2
             , GHC == 9.14.1
extra-source-files:
  .hlint.yaml
  CHANGELOG.markdown
  README.markdown

source-repository head
  type: git
  location: https://github.com/ekmett/contravariant.git

flag StateVar
  description:
    You can disable the use of the `StateVar` package using `-f-StateVar`.
    .
    Disabling this is an unsupported configuration, but it may be useful for accelerating builds in sandboxes for expert users.
  default: True
  manual: True

library
  hs-source-dirs: src
  build-depends:
    base         >= 4.9 && < 5,
    transformers >= 0.3 && < 0.7

  if flag(StateVar)
    build-depends: StateVar >= 1.2.1 && < 1.3

  exposed-modules:
    Data.Functor.Contravariant.Compose
    Data.Functor.Contravariant.Divisible

  if impl(ghc)
    -- MicroHs doesn't support type families yet
    exposed-modules:
      Data.Functor.Contravariant.Generic

  if impl(ghc < 8.5)
    hs-source-dirs: old-src
    exposed-modules: Data.Functor.Contravariant

  if impl(ghc >= 8.6)
    ghc-options: -Wno-star-is-type

  if impl(ghc >= 9.0)
    -- these flags may abort compilation with GHC-8.10
    -- https://gitlab.haskell.org/ghc/ghc/-/merge_requests/3295
    ghc-options: -Winferred-safe-imports -Wmissing-safe-haskell-mode

  ghc-options: -Wall
  default-language: Haskell2010
