Name:                countdown-numbers-game
Version:             0.0.0.1
Synopsis:            Solve problems from the number round of the Countdown game show
Description:
  Solver for the numbers round of the Countdown game show:
  .
  * <https://en.wikipedia.org/wiki/Countdown_(game_show)>
  .
  * <https://www.youtube.com/watch?v=pfa3MHLLSWI>
  .
  That is, given six numbers and a target number,
  find an arithmetical expression containing exactly those six numbers
  that yields the target number.
  The solver however is neither limited to a certain number of operands
  nor to a certain magnitude of numbers
  nor to uniqueness of the operands.
  Please note, that the solver also emits solutions
  where not all of the given operands are used.
  .
  Example:
  .
  > $ countdown-numbers-solve 23 42 3 4 5 --result 777
  > (23*3+5)*42/4
  .
  The solver employs a brute-force search,
  but ensures that expressions are unique up to commutativity and associativity.
  It determines all solutions of a problem within seconds.
Homepage:            https://hub.darcs.net/thielema/countdown-numbers-game
License:             BSD3
License-File:        LICENSE
Author:              Henning Thielemann
Maintainer:          haskell@henning-thielemann.de
Category:            Math
Build-Type:          Simple
Cabal-Version:       >=1.10

Extra-Source-Files:
  Makefile

Source-Repository this
  Tag:         0.0.0.1
  Type:        darcs
  Location:    https://hub.darcs.net/thielema/countdown-numbers-game

Source-Repository head
  Type:        darcs
  Location:    https://hub.darcs.net/thielema/countdown-numbers-game

Executable countdown-numbers-solve
  Build-Depends:
    optparse-applicative >=0.11 && <0.19,
    non-empty >=0.3.2 && <0.4,
    utility-ht >=0.0.11 && <0.1,
    base >=4.5 && <5
  Default-Language:    Haskell2010
  GHC-Options:         -Wall
  Hs-Source-Dirs:      src
  Main-is:             Main.hs
  Other-Modules: Solve

Test-Suite countdown-numbers-test
  Type: exitcode-stdio-1.0
  Build-Depends:
    doctest-exitcode-stdio >=0.0 && <0.1,
    doctest-lib >=0.1 && <0.2,
    -- 2.8 for 'shuffle'
    QuickCheck >=2.8 && <3,
    non-empty >=0.3.2 && <0.4,
    utility-ht >=0.0.11 && <0.1,
    base >=4.5 && <5
  Default-Language:    Haskell2010
  GHC-Options:         -Wall
  Hs-Source-Dirs:      src, test
  Main-is:             TestMain.hs
  Other-Modules:
    Test.Solve
    Test.Utility
    Solve
